Fix mass deal spacing on buisness dashboard

--- a/app/assets/stylesheets/deals.scss
+++ b/app/assets/stylesheets/deals.scss
@@ -98,8 +98,12 @@ hr {
   margin: auto;
   font-weight: bold;
 }
-.requests, .mass-deals{
+.requests{
   margin-top: 6em;
+}
+
+.mass-deals{
+  margin: 6em 0
 }
 
 .empty {
